--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.berkeley.cs186</groupId>
     <artifactId>database</artifactId>
@@ -25,6 +25,7 @@
     </properties>
 
     <build>
+        <directory>${env.MAVEN_TEMP}</directory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -44,7 +45,8 @@
                         <exclude>**/*$*</exclude>
                     </excludes>
                     <trimStackTrace>false</trimStackTrace>
-                    <argLine> -Xms32m -Xmx32m </argLine> <!--ADD TEST JVM ARGS HERE i.e '-Xms8m -Xmx8m' to limit memory to 8m -->
+                    <argLine>-Xms32m -Xmx32m
+                    </argLine> <!--ADD TEST JVM ARGS HERE i.e '-Xms8m -Xmx8m' to limit memory to 8m -->
                     <groups>edu.berkeley.cs186.database.categories.Proj${proj}Tests</groups>
                 </configuration>
             </plugin>
@@ -60,7 +62,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner</excludedGroups>
+                            <excludedGroups>
+                                edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner
+                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -74,7 +78,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner</excludedGroups>
+                            <excludedGroups>
+                                edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner
+                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -88,7 +94,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTestRunner</excludedGroups>
+                            <excludedGroups>
+                                edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTestRunner
+                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -102,7 +110,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTests</excludedGroups>
+                            <excludedGroups>
+                                edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.StudentTests
+                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -116,7 +126,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner</excludedGroups>
+                            <excludedGroups>
+                                edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner
+                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -147,7 +159,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <excludedGroups>edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner</excludedGroups>
+                            <excludedGroups>
+                                edu.berkeley.cs186.database.categories.SystemTests,edu.berkeley.cs186.database.categories.PublicTests,edu.berkeley.cs186.database.categories.HiddenTests,edu.berkeley.cs186.database.categories.StudentTests,edu.berkeley.cs186.database.categories.StudentTestRunner
+                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
